added a darkmode switcher. It is not finished. It is just the beginning

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -71,6 +71,12 @@
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <button id="darkModeToggle" class="btn btn-link nav-link textInNavBar">
+                        <img src="../icones/bx--moon.png" id="darkModeIcon" width="20" height="20">
+                        <span id="darkModeText">Dark Mode</span>
+                    </button>
+                </li>
             </ul>
         </div>
     </div>
