Changed the link for the start now button in the index html

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -96,7 +96,7 @@
     <div class="hero-content">
         <h1 class="headLine display-4"><span class="translate-text" data-key="welcome">Willkommen bei Fitness & Health</span></h1>
         <p class="lead" style="font-weight: lighter; max-width: 600px;"><span class="translate-text" data-key="solutions">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</span></p>
-        <button class="btn btn-primary btn-custom-head btn-lg" onclick="document.location = 'nutrition.html'"><span
+        <button class="btn btn-primary btn-custom-head btn-lg" onclick="document.location = '../Nutrition/nutrition.html'"><span
                 class="translate-text" data-key="start">Starte jetzt</span></button>
     </div>
 </div>
