made an extra js file for the dark mode so that every site can get to it better, so we dont write too much same code

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -215,5 +215,6 @@
 
 <script src="../All/translate.js"></script>
 <script src="disclaimer.js"></script>
+<script src="../All/darkmode.js"></script>
 </body>
 </html>
