--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -55,13 +55,22 @@
                 </li>
                 <!-- Sprachauswahl Dropdown -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle textInNavBar" href="#" id="navbarLanguageDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <span data-translate="true">Sprache</span>
+                    <a class="nav-link dropdown-toggle textInNavBar" href="#" id="navbarLanguageDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="translate-text" data-key="language">Sprache</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarLanguageDropdown">
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('de')">Deutsch</a></li>
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('en')">English</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
+                </li>
+                <li class="nav-item">
+                    <button id="darkModeToggle" class="btn btn-link nav-link textInNavBar">
+                        <img src="../icones/bx--moon.png" id="darkModeIcon" width="20" height="20">
+                        <span id="darkModeText">Dark Mode</span>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -109,9 +118,9 @@
     </div>
 </div>
 
-<div class="top-search-products" style="background-color: #F9F4E6">
+<div class="top-search-products">
     <br><br>
-    <h1 class="title-shop" style="text-align: center;" data-translate="true">Produkte</h1>
+    <h1 class="title-shop product-title" style="text-align: center;" data-translate="true">Produkte</h1>
 </div>
 
 <div class="container mt-5">
@@ -231,5 +240,7 @@
         </div>
     </footer>
 </div>
+
+<script src="../All/darkmode.js"></script>
 </body>
 </html>
