--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -46,13 +46,22 @@
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle textInNavBar" href="#" id="navbarLanguageDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <span data-translate="true">Sprache</span>
+                    <a class="nav-link dropdown-toggle textInNavBar" href="#" id="navbarLanguageDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="translate-text" data-key="language">Sprache</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarLanguageDropdown">
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('de')"><span data-translate="true">Deutsch</span></a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('en')"><span data-translate="true">English</span></a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('de')">Deutsch</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('en')">English</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
+                </li>
+                <li class="nav-item">
+                    <button id="darkModeToggle" class="btn btn-link nav-link textInNavBar">
+                        <img src="../icones/bx--moon.png" id="darkModeIcon" width="20" height="20">
+                        <span id="darkModeText">Dark Mode</span>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -155,7 +164,7 @@
         </div>
     </footer>
 </div>
-
+<script src="../All/darkmode.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
