--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -145,6 +145,12 @@
         </div>
     </div>
 </div>
+<button id="login">Login</button>
+<button id="logout" style="display:none;">Logout</button>
+<div id="user-info" style="display:none;">
+    <span id="user-name"></span>
+    <img id="user-pic" src="" />
+</div>
 
 <div class="container my-5" style="margin-top: 5%; margin-bottom: 5%">
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 "
@@ -216,5 +222,7 @@
 <script src="../All/translate.js"></script>
 <script src="disclaimer.js"></script>
 <script src="../All/darkmode.js"></script>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+<script type="module" src="../All/auth.js"></script>
 </body>
 </html>
