--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -223,6 +223,6 @@
 <script src="disclaimer.js"></script>
 <script src="../All/darkmode.js"></script>
 <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
-<script src="../All/auth.js"></script>
+<script type="module" src="../All/auth.js"></script>
 </body>
 </html>
