--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body style="background-color: #F9F4E6">
+<body>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed">
@@ -70,12 +70,6 @@
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
-                </li>
-                <li class="nav-item">
-                    <button id="darkModeToggle" class="btn btn-link nav-link textInNavBar">
-                        <img src="../icones/bx--moon.png" id="darkModeIcon" width="20" height="20">
-                        <span id="darkModeText">Dark Mode</span>
-                    </button>
                 </li>
             </ul>
         </div>
@@ -219,7 +213,7 @@
 <script type="module" src="../All/Auth/auth0-service.js"></script>
 <script type="module" src="../Mainpage/disclaimer.js"></script>
 <script type="module" src="../All/translate.js"></script>
-<script type="module" src="../All/darkmode.js"></script>
+
 <script type="module">
     import { initAuth0, getAuth0Client } from "../All/Auth/auth0-service.js";
 
