--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -10,7 +10,7 @@
     <script src="../All/translate.js"></script>
     <title>Über uns</title>
 </head>
-<body style="background-color: #F9F4E6; overflow-x: hidden; font-family: Arial, sans-serif">
+<body>
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
@@ -56,12 +56,6 @@
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
-                </li>
-                <li class="nav-item">
-                    <button id="darkModeToggle" class="btn btn-link nav-link textInNavBar">
-                        <img src="../icones/bx--moon.png" id="darkModeIcon" width="20" height="20">
-                        <span id="darkModeText">Dark Mode</span>
-                    </button>
                 </li>
             </ul>
         </div>
@@ -164,7 +158,7 @@
         </div>
     </footer>
 </div>
-<script src="../All/darkmode.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
