--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -16,7 +16,7 @@
     <title>Ernährung</title>
 
 </head>
-<body style="background-color: #F9F4E6; overflow: auto; margin: 0; padding: 0;">
+<body>
 <!-- Sticky Top Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
     <div class="container-fluid">
@@ -64,12 +64,6 @@
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
-                </li>
-                <li class="nav-item">
-                    <button id="darkModeToggle" class="btn btn-link nav-link textInNavBar">
-                        <img src="../icones/bx--moon.png" id="darkModeIcon" width="20" height="20">
-                        <span id="darkModeText">Dark Mode</span>
-                    </button>
                 </li>
             </ul>
         </div>
