--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -12,7 +12,7 @@
     <script src="shop.js"></script>
     <script src="../All/translate.js"></script>
 </head>
-<body style="background-color: #F9F4E6">
+<body>
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
@@ -65,12 +65,6 @@
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
-                </li>
-                <li class="nav-item">
-                    <button id="darkModeToggle" class="btn btn-link nav-link textInNavBar">
-                        <img src="../icones/bx--moon.png" id="darkModeIcon" width="20" height="20">
-                        <span id="darkModeText">Dark Mode</span>
-                    </button>
                 </li>
             </ul>
         </div>
