Changed some files and added the script for auth0 in the header

--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-about-us.css">
     <script src="../All/translate.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <title>Über uns</title>
 </head>
 <body>
