--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -13,6 +13,7 @@
     <script src="nutrition.js"></script>
     <script src="food-recommender.js"></script>
     <script src="../All/translate.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <title>Ernährung</title>
 
 </head>
