--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <script src="shop.js"></script>
     <script src="../All/translate.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 </head>
 <body>
 
