--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src = "../All/translate.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 </head>
 <body>
 <!-- Sticky Top Bar -->
