optimized dark mode in nutrition page

--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -101,13 +101,17 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="gender" class="form-label" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Geschlecht</span></label>
-                    <select class="form-select" id="gender" required>
-                        <option value="" disabled selected class="style-for-text-in-options"><span data-translate="true">Wähle dein Geschlecht</span></option>
-                        <option value="Männlich" class="style-for-text-in-options"><span data-translate="true">Männlich</span></option>
-                        <option value="Weiblich" class="style-for-text-in-options"><span data-translate="true">Weiblich</span></option>
+                    <label for="gender" class="form-label" style="color: #6AA84F; font-family: sans-serif">
+                        <span data-translate="true">Geschlecht</span>
+                    </label>
+                    <select class="form-select" id="gender" required style="font-family: sans-serif">
+                        <option value="" disabled selected>Wähle dein Geschlecht</option>
+                        <option value="Männlich">Männlich</option>
+                        <option value="Weiblich">Weiblich</option>
                     </select>
-                    <div class="invalid-feedback"><span data-translate="true">Bitte wählen Sie ein Geschlecht aus.</span></div>
+                    <div class="invalid-feedback">
+                        <span data-translate="true">Bitte wählen Sie ein Geschlecht aus.</span>
+                    </div>
                 </div>
 
                 <div class="mb-3">
