--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -143,52 +143,71 @@
 <button id="logout" style="display: none;">Logout</button>
 <div id="user-info"></div>
 
-<div class="container my-5" style="margin-top: 5%; margin-bottom: 5%">
-    <footer class="text-center text-lg-start border mt-xl-5 pt-4 "
-            style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); background-color: #2A1A14">
+<div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
+
+    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter"><span class="translate-text" data-key="our_world">Unsere Welt</span></h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
+                        <span data-translate="true">Unsere Welt</span>
+                    </h5>
+
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="../Shop/shop.html" class="hover-effects"><span class="translate-text" data-key="products">Produkte</span></a>
+                            <a href="../Shop/shop.html" class="hover-effects">
+                                <span data-translate="true">Produkte</span>
+                            </a>
                         </li>
                         <li>
-                            <a href="../Training/trainings-plan.html" class="hover-effects"><span
-                                    class="translate-text" data-key="training">Trainingspläne</span></a>
+                            <a href="../Training/trainings-plan.html" class="hover-effects">
+                                <span data-translate="true">Trainingspläne</span>
+                            </a>
                         </li>
                         <li>
-                            <a href="../Nutrition/nutrition.html" class="hover-effects"><span
-                                    class="translate-text" data-key="nutrition">Ernährungspläne</span></a>
+                            <a href="../Nutrition/nutrition.html" class="hover-effects">
+                                <span data-translate="true">Ernährungspläne</span>
+                            </a>
                         </li>
                         <li>
-                            <a href="../AboutUs/about-us.html" class="hover-effects"><span class="translate-text" data-key="about">Über uns</span></a>
+                            <a href="../AboutUs/about-us.html" class="hover-effects">
+                                <span data-translate="true">Über uns</span>
+                            </a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter"><span class="translate-text" data-key="career">Karriere</span></h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                        <span data-translate="true">Karriere</span>
+                    </h5>
+
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="hover-effects"><span class="translate-text" data-key="jobs">Jobs</span></a>
+                            <a href="#!" class="hover-effects">
+                                <span data-translate="true">Jobs</span>
+                            </a>
                         </li>
                     </ul>
                 </div>
+
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter"><span class="translate-text" data-key="contact">Kontaktiere uns</span></h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                        <span data-translate="true">Kontaktiere uns</span>
+                    </h5>
+
                     <div class="form-outline form-white mb-4">
-                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects"><span
-                                class="translate-text" data-key="click_here">Klicke hier</span></a>
+                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">
+                            <span data-translate="true">Klicke hier</span>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded"
-                         style="width: 50%">
+                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
         </div>
     </footer>
+
 </div>
 
 <div class="modal fade" id="disclaimerModal" tabindex="-1" aria-labelledby="disclaimerModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
