--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -191,41 +191,68 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
-                <a id="buyLink"
-                   href="#"
-                target="_blank"
-                class="btn btn-success"
-                style="display: none;">
                 <i class="fas fa-shopping-cart me-2"></i>
-                <span id="buyLinkText">Zum Shop</span>
             </div>
         </div>
     </div>
 </div>
 
 <div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
+
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;" data-translate="true">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
+                        <span data-translate="true">Unsere Welt</span>
+                    </h5>
+
                     <ul class="list-unstyled mb-4">
-                        <li><a href="shop.html" class="hover-effects" data-translate="true">Produkte</a></li>
-                        <li><a href="../Training/trainings-plan.html" class="hover-effects" data-translate="true">Trainingspläne</a></li>
-                        <li><a href="../Nutrition/nutrition.html" class="hover-effects" data-translate="true">Ernährungspläne</a></li>
-                        <li><a href="../AboutUs/about-us.html" class="hover-effects" data-translate="true">Über uns</a></li>
+                        <li>
+                            <a href="../Shop/shop.html" class="hover-effects">
+                                <span data-translate="true">Produkte</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../Training/trainings-plan.html" class="hover-effects">
+                                <span data-translate="true">Trainingspläne</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="nutrition.html" class="hover-effects">
+                                <span data-translate="true">Ernährungspläne</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../AboutUs/about-us.html" class="hover-effects">
+                                <span data-translate="true">Über uns</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" data-translate="true">Karriere</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                        <span data-translate="true">Karriere</span>
+                    </h5>
+
                     <ul class="list-unstyled">
-                        <li><a href="#!" class="hover-effects" data-translate="true">Jobs</a></li>
+                        <li>
+                            <a href="#!" class="hover-effects">
+                                <span data-translate="true">Jobs</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
+
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" data-translate="true">Kontaktiere uns</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                        <span data-translate="true">Kontaktiere uns</span>
+                    </h5>
+
                     <div class="form-outline form-white mb-4">
-                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects" data-translate="true">Klicke hier</a>
+                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">
+                            <span data-translate="true">Klicke hier</span>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
@@ -234,8 +261,8 @@
             </div>
         </div>
     </footer>
+
 </div>
 
-<script src="../All/darkmode.js"></script>
 </body>
 </html>
