--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -163,6 +163,7 @@
 <div id="foodRecomTableContainer" class="container my-5">
 
 </div>
+
 <div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
 
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
@@ -185,7 +186,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="hover-effects">
+                            <a href="../Nutrition/nutrition.html" class="hover-effects">
                                 <span data-translate="true">Ernährungspläne</span>
                             </a>
                         </li>
@@ -230,6 +231,6 @@
 
 </div>
 
-<script src="../All/darkmode.js"></script>
+
 </body>
 </html>
