--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -127,29 +127,62 @@
     </div>
 </div>
 
-<div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
+<<div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
+
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;"><span data-translate="true">Unsere Welt</span></h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
+                        <span data-translate="true">Unsere Welt</span>
+                    </h5>
+
                     <ul class="list-unstyled mb-4">
-                        <li><a href="../Shop/shop.html" class="hover-effects"><span data-translate="true">Produkte</span></a></li>
-                        <li><a href="../Training/trainings-plan.html" class="hover-effects"><span data-translate="true">Trainingspläne</span></a></li>
-                        <li><a href="../Nutrition/nutrition.html" class="hover-effects"><span data-translate="true">Ernährungspläne</span></a></li>
-                        <li><a href="about-us.html" class="hover-effects"><span data-translate="true">Über uns</span></a></li>
+                        <li>
+                            <a href="../Shop/shop.html" class="hover-effects">
+                                <span data-translate="true">Produkte</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../Training/trainings-plan.html" class="hover-effects">
+                                <span data-translate="true">Trainingspläne</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../Nutrition/nutrition.html" class="hover-effects">
+                                <span data-translate="true">Ernährungspläne</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../AboutUs/about-us.html" class="hover-effects">
+                                <span data-translate="true">Über uns</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter"><span data-translate="true">Karriere</span></h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                        <span data-translate="true">Karriere</span>
+                    </h5>
+
                     <ul class="list-unstyled">
-                        <li><a href="#!" class="hover-effects"><span data-translate="true">Jobs</span></a></li>
+                        <li>
+                            <a href="#!" class="hover-effects">
+                                <span data-translate="true">Jobs</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
+
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter"><span data-translate="true">Kontaktiere uns</span></h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                        <span data-translate="true">Kontaktiere uns</span>
+                    </h5>
+
                     <div class="form-outline form-white mb-4">
-                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects"><span data-translate="true">Klicke hier</span></a>
+                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">
+                            <span data-translate="true">Klicke hier</span>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
@@ -158,6 +191,7 @@
             </div>
         </div>
     </footer>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
