--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -71,6 +71,12 @@
                         <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link textInNavBar" href="">
+                        <img src="../icones/login-picture.svg" class="changeColor" alt="Über uns" width="20" height="20">
+                        <span class="translate-text" data-key="login">Login</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
