Added the login button on all pages

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -73,7 +73,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="">
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Über uns" width="20" height="20">
+                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
                         <span class="translate-text" data-key="login">Login</span>
                     </a>
                 </li>
