--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -72,7 +72,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="">
+                    <a class="nav-link textInNavBar" href="" id="login-button">
                         <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
                         <span class="translate-text" data-key="login">Login</span>
                     </a>
@@ -235,7 +235,7 @@
     </div>
 </div>
 
-<script type="module" src="../All/Auth/auth0-service.js"></script>
+<script type="module" src="../All/Auth/auth0.js"></script>
 <script type="module" src="../Mainpage/disclaimer.js"></script>
 <script type="module" src="../All/translate.js"></script>
 <script src="../Mainpage/disclaimer.js"></script>
